CH 08: sympy ameliore

--- a/TP_premiere/Chapitre_08_Sympy.ipynb
+++ b/TP_premiere/Chapitre_08_Sympy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,12 +29,20 @@
     "    \n",
     "qui donne $\\quad \\quad \\frac{e^x\\sin(x)}{x} + e^x\\cos(x) −  \\frac{e^x\\sin(x)}{x^2}$.\n",
     "\n",
-    "Source du doc disponible sur : http://www.tangentex.com/CalculSymbolique.htm#Par6"
+    "Source du doc disponible sur :\n",
+    "[Cliquez ici](http://www.tangentex.com/CalculSymbolique.htm#Par6 \"Source\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Déninir le symbole, variable de votre fonction."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +63,7 @@
        "cos(x)"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +86,7 @@
        "exp(x)*sin(x)/x + exp(x)*cos(x)/x - exp(x)*sin(x)/x**2"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,12 +101,12 @@
    "source": [
     "# Application 1 de notre cours : verifions ensemble ?\n",
     "\n",
-    "Attention : la fonction $diff()$ de sympy montre uniquement le résultat final, elle permet seulemnt de vérifier ses calculs !"
+    "Attention : la fonction _diff()_ de sympy montre uniquement le résultat final, elle permet seulement de vérifier ses calculs !!!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +118,7 @@
        "2 - 7*x"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +143,7 @@
        "-7"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +166,7 @@
        "sqrt(x) + x**2"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +191,7 @@
        "2*x + 1/(2*sqrt(x))"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +214,7 @@
        "-5/x"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +239,7 @@
        "5/x**2"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +262,7 @@
        "x**3/6 - 8*x + 1"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +287,7 @@
        "x**2/2 - 8"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +310,7 @@
        "x**2 + 2/(3*x**2)"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +335,7 @@
        "2*x - 4/(3*x**3)"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -349,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +369,7 @@
        "9*sqrt(x)/2"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +399,7 @@
        "5*x**(3/2)/2"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +422,7 @@
        "5*(1 - 2*x)/(x**2 - x)**2"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +445,7 @@
        "21*(7*x + 1)**2"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +468,7 @@
        "1/sqrt(2*x - 2)"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -470,11 +478,60 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Travailler en autonomie sur plateforme `EULER-WIMS` de Versailles"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import IPython.display as ipd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"900\"\n",
+       "            height=\"400\"\n",
+       "            src=\"http://acver.fr/gi8\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x7fd0e4d8b790>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ipd.IFrame(src=\"http://acver.fr/gi8\",width = 900,height = 400)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#ipd.Audio(\"/home/elhadji/Desktop/test.wav\")"
+   ]
   }
  ],
  "metadata": {
@@ -493,9 +550,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
